# yana_cmake_example

./: CMakeLists.txt
include/: animal.h  cat.h  dog.h
src/: animal.cpp  cat.cpp  dog.cpp  main.cpp
